make-a-wish-salesforce/src/objects/cg__ViewSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>cg__Object_Selected_Fields1__c</fullName>
        <description>Selected fields for file list component</description>
        <label>Object Selected Fields1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Object_Selected_Fields2__c</fullName>
        <label>Object Selected Fields2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Object_Selected_Fields3__c</fullName>
        <label>Object Selected Fields3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Object_Sort_Field1__c</fullName>
        <label>Object Sort Field1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Object_Sort_Field2__c</fullName>
        <label>Object Sort Field2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Object_Sort_Field3__c</fullName>
        <label>Object Sort Field3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Object_View_Types1__c</fullName>
        <label>Object View Types1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Object_View_Types2__c</fullName>
        <label>Object View Types2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Object_View_Types3__c</fullName>
        <label>Object View Types3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ViewSettings</label>
</CustomObject>